temporarily roll back firefox scrollbar fix (broke Chrome)

--- a/app/assets/stylesheets/message_index.scss
+++ b/app/assets/stylesheets/message_index.scss
@@ -18,7 +18,7 @@
 .message-index {
   background-color: #fff;
   flex-shrink: 0;
-  height: 100%;
+  // height: 100%;
 }
 
 .message-index-item {
